--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -15,8 +15,10 @@ html {
     margin: 0;
     padding: 0;
     
-  // max-width: 100vw;
-    overflow-x: hidden;
+  max-width: 100vw;
+  margin: 0 auto;
+  
+    // overflow-x: hidden;
   }
   h1,
   h2,
