--- a/sass/components/_img-animate.scss
+++ b/sass/components/_img-animate.scss
@@ -1,7 +1,8 @@
 .img__container {
   position: relative;
-  height: 275px;
-  width: 423px;
+  height: auto;
+  max-width: 423px;
+  width: 100%;
   margin: 0 auto;
   margin-left: 28px;
   // box-sizing: border-box;
@@ -13,25 +14,38 @@
   //   background: rgba(253, 251, 251, 0.1);
   //   backdrop-filter: blur(20px);
   // }
+  @media screen and (max-width: 750px) {
+    max-width: 300px;
+    width: 100%;
+    // margin-bottom: 20px;
+  }
 }
 .animate-img {
   position: absolute;
   height: auto;
-  width: 423px;
+  max-width: 423px;
+  width: 100%;
   left: 0;
   transition: opacity 0.5s ease-in-out;
-  
+  @media screen and (max-width: 750px) {
+    max-width: 300px;
+    // margin-bottom: 20px;
+  }
   // box-sizing: content-box;
 }
 ._shadov-img {
   position: absolute;
-  top: 35%;
+  top: 15%;
   left: 20%;
   width: 90%;
   transition: opacity 0.5s ease-in-out;
   // opacity: 0.2;
-filter: blur(20px);
+filter: blur(5px);
 z-index: -1 !important;
+@media screen and (max-width: 750px) {
+  
+  // margin-bottom: 20px;
+}
 }
 .first-img {
   animation-name: cf3FadeInOut;
