--- a/sass/components/_player.scss
+++ b/sass/components/_player.scss
@@ -83,7 +83,9 @@
     
 }
 .layer--overlay {
-    box-shadow:  0em 0em 30px 10px rgb(2, 2, 2);
+    box-shadow: 6px 6px 37px 6px rgba(0,0,0,0.39);
+-webkit-box-shadow: 6px 6px 37px 6px rgba(0,0,0,0.39);
+-moz-box-shadow: 6px 6px 37px 6px rgba(0,0,0,0.39);
     z-index: 5;
     border-radius: 50%;
 }
