--- a/sass/components/_questions.scss
+++ b/sass/components/_questions.scss
@@ -20,10 +20,7 @@
   max-width: 900px;
   width: 100%;
   margin-left: auto;
-//   justify-content: flex-end;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: flex-end;
+
 @media screen and (max-width: 750px) {
   max-width: 750px;
 }
@@ -34,12 +31,18 @@
 .bgb3 {
   bottom: -8%;
   left: -5%;
-
+  @media screen and (max-width: 750px) {
+    width: 40vw;
+    height: auto;
+  }
 }
 .bgp3 {
   top: 40%;
   right: 5%;
-
+  @media screen and (max-width: 750px) {
+    width: 40vw;
+    height: auto;
+  }
 }
 .questions__title {
   font-style: normal;
@@ -53,6 +56,7 @@
   color: #000000;
   @media screen and (max-width: 750px) {
     font-size: 32px;
+    margin-bottom: 20px;
   }
  
 }
@@ -65,6 +69,10 @@
   width: 100%;
 
   color: #6e7681;
+  
+  @media screen and (max-width: 750px) {
+    font-size: 16px;
+  }
 }
 .questions__list {
   display: flex;
@@ -74,6 +82,11 @@
   margin-left:25%;
   margin-right: 25%;
   padding: 0;
+  
+  @media screen and (max-width: 750px) {
+   margin: 25px auto;
+  }
+ 
 }
 .questions__item {
   display: flex;
@@ -87,7 +100,10 @@
   background-color: #ffffff;
   cursor: pointer;
   // z-index: 10;
-  // position: relative;
+  position: relative;
+ 
+ 
+  
 }
 .questions__item__btn-contain {
   display: flex;
@@ -95,6 +111,9 @@
   padding: 15px;
   justify-content: space-between;
   align-items: center;
+  @media screen and (max-width: 750px) {
+    padding: 0;
+  }
 }
 .questions__item__title {
   font-style: normal;
@@ -106,6 +125,10 @@
   letter-spacing: 0.01em;
 
   color: #000000;
+  @media screen and (max-width: 750px) {
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
 }
 .questions__item__btn {
   width: 34px;
@@ -127,17 +150,9 @@
  
   overflow: hidden;
   width: 90%;
-  height: 0;
-  transition: height 1s;
+  max-height: 0;
+  transition: max-height 1s;
  
-  /* or 133% */
-
-  
-  // &.active_item {
-  //   width: 90%;
-  //   height: auto;
-  //   margin: 15px;
-  // }
 }
 .questions__item__text {
   font-style: normal;
