--- a/sass/components/_service.scss
+++ b/sass/components/_service.scss
@@ -26,9 +26,11 @@
     font-size: 32px;
     padding-left: 50px;
   }
-  //   @media screen and (max-width: 543px) {
-  //     font-size: 64px;
-  //   }
+    @media screen and (max-width: 543px) {
+      padding: 0;
+      text-align: center;
+      max-width: 520px;
+    }
   & > span {
     color: $prim-white;
     position: relative;
@@ -41,7 +43,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-35%, -50%);
-      z-index: -1;
+      z-index: -5;
       @media screen and (max-width: 750px) {
         width: 110px;
         height: 110px;
@@ -53,23 +55,30 @@
 .service__content {
   display: flex;
   margin-top: 49px;
-  //   position: relative;
+  
   @media screen and (max-width: 750px) {
     display: flex;
-    // flex-wrap: wrap;
-    // flex-direction: column;
+   
+  }
+  @media screen and (max-width:540px) {
+   position: relative;
+   
   }
 }
 .service__list {
   margin: 0;
   padding: 0;
-
-  //   @media screen and (max-width: 750px) {
-  //     // display: flex;
-  //     padding: 0;
-  //     // flex-wrap: wrap;
-  //     // flex-direction: column;
-  //   }
+height: max-content;
+position: -webkit-sticky;
+    position: sticky;
+    top: 20px;
+    @media screen and (max-width: 543px) {
+      position: relative;
+      padding: 0;
+    width: 100%;
+    max-width: 543px;
+    height: 100%;
+    }
 }
 .service__item {
   font-style: normal;
@@ -87,14 +96,51 @@
     padding: 10px 10px;
     
   }
+  @media screen and (max-width: 543px) {
+    width: 100%;
+    max-width: 543px;
+    height: auto;
+    margin: 0 auto;
+    background-color: #f6f8fa;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    padding: 15px;
+    position: relative;
+    &::after {
+      content: '';
+      width: 25px;
+      height: 25px;
+      background: url('../images/iconbut.svg');
+      background-position: right;
+      background-repeat: no-repeat;
+      background-size: cover;
+      
+      position: absolute;
+      right: 10px;
+    }
+  }
   &__current {
     background-color: #f6f8fa;
     border-radius: 4px;
     color: $prim-black;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 20px;
+    
   }
+}
+.btn__close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  background: none;
+  z-index: 999;
+  border-radius: 50%;
+  background: url('../images/Group_99.svg');
+  background-size: contain;
+  transform: rotate(45deg);
+  border: none;
+  // content: url('../images/iconbut.svg')
 }
 .service__content__list {
   width: 0px;
@@ -102,30 +148,68 @@
   margin: 0;
   overflow: hidden;
   display: none;
+  @media screen and (max-width: 543px) {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgb(255, 255, 255);
+    // opacity: 0.5;
+    width: 100vw;
+    height: 100vh;
+    z-index: 100;
+    transform: translateX(-100%);
+    transition: transform 0.8s;
+    flex-direction: column;
+    padding: 50px;
+    overflow-y: scroll;
+    box-sizing: border-box;
+  }
   &__active {
     display: flex;
     width: 100%;
     height: auto;
     flex-wrap: wrap;
-    @media screen and (max-width: 750px) {
-      display: flex;
-      // flex-wrap: wrap;
-      flex-direction: column;
+    
+    @media screen and (max-width: 543px) {
+      overflow-y: scroll;
+      transform: translateX(0);
     }
-    // margin-top: 20px;
-    // margin: -129px;
+    
   }
+}
+.service__content__list__content {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-wrap: wrap;
+  overflow-y: auto;
+  
 }
 .service__content__item {
   width: calc((100% - 129px) / 2);
   margin-right: 129px;
-  z-index: 1;
-  &:nth-child(2n) {
-    margin: 0;
+  &:nth-last-child(2n) {
+     margin: 0;
   }
+  // z-index: 1;
+  // &:nth-child(2n) {
+  //  
+  // }
   @media screen and (max-width: 750px) {
     width: 100%;
+    margin: 0 0 20px 0;
+    
+    &:nth-child(2n) {
+      margin-bottom: 20px;
+    }
+  }
+  @media screen and (max-width: 543px) {
+    width: 100%;
     margin-bottom: 20px;
+    &:nth-child(2n) {
+      margin-bottom: 20px;
+    }
   }
 }
 .service__content__title {
